Adding the form inputs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
   </head>
   <body>
+    <form action="" method="post">
+      <label for="title">Title:</label>
+      <input
+        type="text"
+        id="title"
+        name="title"
+        placeholder="The Hunger Games..."
+      />
+
+      <label for="author">Author:</label>
+      <input
+        type="text"
+        id="author"
+        name="author"
+        placeholder="Suzanne Collins..."
+      />
+
+      <label for="pages"># of Pages:</label>
+      <input type="text" id="pages" name="pages" placeholder="384..." />
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
