Use .value property to get HTML of forms
Allows to use the data as a parameter for the
Book constructor function

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
       />
 
       <label for="pages"># of Pages:</label>
-      <input type="text" id="pages" name="pages" placeholder="384..." />
+      <input type="number" id="pages" name="pages" placeholder="384..." />
     </form>
+    <button id="btn-submit" type="submit">Submit</button>
     <script src="script.js"></script>
   </body>
 </html>
