--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <form action="" method="post">
+    <form id="form-book" action="" method="post">
       <label for="title">Title:</label>
       <input
         type="text"
@@ -26,8 +26,10 @@
 
       <label for="pages"># of Pages:</label>
       <input type="number" id="pages" name="pages" placeholder="384..." />
+
+      <button id="btn-submit" type="submit">Submit</button>
     </form>
-    <button id="btn-submit" type="submit">Submit</button>
+
     <script src="script.js"></script>
   </body>
 </html>
