--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         id="title"
         name="title"
         placeholder="The Hunger Games..."
+        maxlength="30"
       />
 
       <label for="author">Author:</label>
@@ -22,13 +23,27 @@
         id="author"
         name="author"
         placeholder="Suzanne Collins..."
+        maxlength="30"
       />
 
       <label for="pages"># of Pages:</label>
-      <input type="number" id="pages" name="pages" placeholder="384..." />
+      <input
+        type="number"
+        id="pages"
+        name="pages"
+        placeholder="384..."
+        maxlength="30"
+      />
 
       <button id="btn-submit" type="submit">Submit</button>
     </form>
+    <div class="container-card">
+      <div class="card">
+        <h2>Title</h2>
+        <h4>Pages</h4>
+        <h4>Author</h4>
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
