Working on solving how to only add the newest book when submit button is clicked rather than all of the items of myLibrary being displayed.

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       <button id="btn-submit" type="submit">Submit</button>
     </form>
     <div class="container-card">
-      <div class="card">
+      <!-- <div class="card">
         <h2>Title</h2>
         <h4>Pages</h4>
         <h4>Author</h4>
-      </div>
+      </div> -->
     </div>
 
     <script src="script.js"></script>
